# primitive-fs

./: .gitignore  CMakeLists.txt  Makefile
src/app/: PrimitiveFsApp.cpp  PrimitiveFsApp.h  main.cpp
src/command/: Command.h  FunctionMapper.h  function.cpp  function.h  returnval.h
src/common/: structures.cpp  structures.h
src/fs/: DataService.cpp  DataService.h  FileData.cpp  FileData.h  FileSystem.cpp  FileSystem.h  InodeService.cpp  InodeService.h
src/main/: main.cpp
src/main/app/: PrimitiveFsApp.cpp  PrimitiveFsApp.h
src/main/command/: FunctionExecutor.cpp  FunctionExecutor.h  FunctionMapper.h  function.cpp  function.h
src/main/common/: structures.cpp  structures.h
src/main/fs/: DataFile.h  FileSystem.cpp  FileSystem.h
src/utils/: FileDataUtils.h  FileNotFoundException.h  FilePathUtils.h  InputParamsValidator.h  InvalidArgumentException.h  InvalidState.h  ObjectNotFound.h  StringNumberConverter.h
